--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -25,7 +25,7 @@ title: Index
     * [On AWS](deploy-microbosh-to-aws.html)
        * Compatbility
        * CloudFormation template
-    * On OpenStack
+    * [On OpenStack](deploy-microbosh-to-openstack.html)
        * Compatbility
        * Heat template
     * On vSphere
