Edits to BOSH problems

--- a/problems.html.md.erb
+++ b/problems.html.md.erb
@@ -8,7 +8,7 @@ The [Release Engineering page](http://en.wikipedia.org/wiki/Release_engineering)
 
 > **Identifiability** Being able to identify all of the source, tools, environment, and other components that make up a particular release.
 
-The BOSH concept of software release packages all related source code, binary assets, configuration etc. This allows users to track content in a particular release. In addition to releases, BOSH provides a way to capture all Operating System dependencies as one image.
+The BOSH concept of software release packages all related source code, binary assets, configuration, etc. This allows users to track content in a particular release. In addition to releases, BOSH provides a way to capture all Operating System dependencies as one image.
 
 > **Reproducibility** The ability to integrate source, third party components, data, and deployment externals of a software system in order to guarantee operational stability.
 
