mention bosh-lite

--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -44,11 +44,11 @@ title: Index
     * The Director
     * [Deployment manifest breakdown](deployment-manifest.html)
     * Basic deployment management commands
-       * bosh deploy(ment)
-       * bosh ssh
-       * bosh vms
        * bosh [upload] stemcell(s)
        * bosh [upload] release(s)
+       * bosh deploy(ment)
+       * bosh vms
+       * bosh ssh
     * Deploying Software step-by-step
        * [explanation of every step of the `bosh deploy` command]
     * Updating deployment to deal with security vulnerabilities
@@ -85,6 +85,7 @@ For BOSH release producers:
     * Creating a release
     * Testing with dev releases
     * Cutting final releases
+       * Versioning of releases
  * What is a job?
     * Creating a job
     * Job properties
