--- a/bootstrap.html.md.erb
+++ b/bootstrap.html.md.erb
@@ -13,10 +13,12 @@ Special BOSH CLI command (<code>bosh micro deploy</code>) can be used to create,
 
 It is highly encouraged to update your BOSH installation frequently to stay on the latest version of BOSH.
 
-Depending on your infrastructure, choose your next step:
+Depending on your IaaS, choose your next step:
 
 - [Deploying MicroBOSH to AWS](deploy-microbosh-to-aws.html)
 - [Deploying MicroBOSH to vSphere](deploy-microbosh-to-vsphere.html)
 - [Deploying MicroBOSH to OpenStack](deploy-microbosh-to-openstack.html)
+
+Alternatively if you want a lighter weight BOSH installation, you can try [BOSH Lite](https://github.com/cloudfoundry/bosh-lite). It comes as a pre-built [Vagrant](https://www.vagrantup.com/) box. The Director that comes with BOSH Lite uses Warden CPI which uses containers to emulate VMs. The usage of containers makes it an excellent choice for local development, testing and general BOSH exploration.
 
 Previous: [BOSH Architecture](bosh-components.html)
