Edits added to Bootstrap document

--- a/bootstrap.html.md.erb
+++ b/bootstrap.html.md.erb
@@ -6,12 +6,12 @@ MicroBOSH is a single VM BOSH installation that includes all necessary BOSH comp
 
 There are two reasons to deploy MicroBOSH:
 
-- to manage deployments of any software
-- to deploy multi-VM BOSH, which in turn could be used for managing other deployments
+- To manage deployments of any software
+- To deploy multi-VM BOSH, which in turn could be used for managing other deployments
 
 Special BOSH CLI command (<code>bosh micro deploy</code>) can be used to create, update or migrate existing MicroBOSH VM. In addition to managing the VM, it is also responsible for managing the persistent disk attached to the MicroBOSH VM. Persistent disk is used by the Director to store information about the deployments it manages.
 
-It is highly encouraged to update your BOSH installation frequently to stay on the latest version of BOSH.
+Cloud Foundry recommends that you update your BOSH installation frequently to stay on the latest version of BOSH.
 
 Depending on your IaaS, choose your next step:
 
@@ -19,6 +19,6 @@ Depending on your IaaS, choose your next step:
 - [Deploying MicroBOSH to vSphere](deploy-microbosh-to-vsphere.html)
 - [Deploying MicroBOSH to OpenStack](deploy-microbosh-to-openstack.html)
 
-Alternatively if you want a lighter weight BOSH installation, you can try [BOSH Lite](https://github.com/cloudfoundry/bosh-lite). It comes as a pre-built [Vagrant](https://www.vagrantup.com/) box. The Director that comes with BOSH Lite uses Warden CPI which uses containers to emulate VMs. The usage of containers makes it an excellent choice for local development, testing and general BOSH exploration.
+Alternatively, if you want a lighter BOSH installation, you can try [BOSH Lite](https://github.com/cloudfoundry/bosh-lite). It comes as a pre-built [Vagrant](https://www.vagrantup.com/) box. The Director that comes with BOSH Lite uses Warden CPI which uses containers to emulate VMs. The usage of containers makes it an excellent choice for local development, testing, and general BOSH exploration.
 
 Previous: [BOSH Architecture](bosh-components.html)
